--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-python-telegram-bot[webhooks]==20.7
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-telegram-bot==20.7
+sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
-sqlalchemy==2.0.25
-python-dotenv==1.0.0
-fastapi==0.109.0
-uvicorn==0.27.0
