--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-telegram-bot==20.7
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+python-telegram-bot==21.7
+sqlalchemy==2.0.36
+psycopg2-binary==2.9.10
+python-dotenv==1.0.1
